[package]
name = "periscope-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]

eframe = "0.24"
egui_extras = { version = "0.24", features = ["all_loaders"] }
image = { version = "0.24", default-features = false, features = [
  "png",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
toml = "0.8"
